Raisons add the reasons fix the programs start new part(why u choose us) overflow

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -68,7 +68,7 @@
     margin-top: 2rem;
     font-size: 1rem;
     display: flex;
-    gap: 2rem;
+    gap: 5rem;
 }
 .figures>div{
     display: flex;
@@ -94,13 +94,14 @@
 .pic{
     position: relative;
     top: 4rem;
-    right: 15rem;
+    right: 12rem;
     widows: 23rem;
     width: 70rem;
+    
 }
 
 .programs{
-    margin-top: 2rem;
+    margin-top: 3.2rem;
     gap: 1rem;
     display: flex;
     flex-direction: column;
@@ -118,38 +119,101 @@
 }
 .program-categories{
     display: flex;
-    gap: 7rem;
     justify-content: center;
     margin-top: 1rem;
+    padding: 1rem;
+    gap: 1rem;
     
 }
 .category:hover{
-    background-color: black;
+    background-image: Linear-gradient(210.41deg, #d7ff25 1.14%, #887316 100.75%);;
     
 }
 .category{
     display: flex;
     flex-direction: column;
-    background-color: green;
-    padding: 4rem;
-    gap: 2rem;
+    background-image:Linear-gradient(210.41deg, #07744a 1.14%, #a5e057 100.75%);
+    padding: 2rem;
     color: white;
-    justify-content: space-between;
     font-size: 1.4rem;
+    gap: 1rem;
     cursor: pointer;
     
 }
+
 .category>:nth-child(1){
-    font-size: 2rem;
-    color: orange;
-    text-align: center;
+    
+    fill: white;
+    width: 5rem;
+    height: 5rem; 
 }
 .category>:nth-child(2){
-    font-size: 2rem;
-    color: white;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: bold;
 }
 .category>:nth-child(3){
-    font-size: 20px;
-    color: white;
+    font-size: 1rem;
+    text-transform: capitalize;
+    color: rgb(7, 7, 7);
+    line-height:35px;
+    word-wrap: break-word;
+    font-family:'Times New Roman', Times, serif;
+    
+
+    
+
+}
+
+.pack-header{
+    gap: 8rem;
+    justify-content: center;
+    display: flex;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 3rem;
+    
+}
+.combo{
+    margin-left: 12px;
+}
+.twopic{
+    display: flex;  
+}
+.somereasons-header{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #07744a;
+    text-transform: uppercase;
+}
+.raisons{
+    margin-top: 1rem;
+}
+.theraisons{
+    color: rgb(54, 54, 54);
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    font-weight: bold;
+    gap: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+}
+
+.theraisons>span:nth-child(1){
+    color: orange;
+    font-size: 2rem;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+.partner{
+    text-transform: uppercase;
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: bold;  
+    color: rgb(109, 21, 21); 
+}
+.partner>img{
+     margin-left: 2rem;
 }
 
